# daft-physical-ai

./: .gitignore  .pre-commit-config.yaml  .ruff.toml  AGENTS.md  README.md  TESTING.md  pyproject.toml
.claude/: settings.json
.github/workflows/: pr-test-suite.yml  publish-package.yml
benchmarks/: raw_av_decode.py  repro_lerobot_decode.py  sweep_lerobot_decode.py  sweep_results.json
daft_ext_template/: __init__.py
daft_physical_ai/: __init__.py  _render.py  _render_rewards.py  cli.py  curation.py
daft_physical_ai/cli/: __init__.py  hands.py  rewards.py
daft_physical_ai/datasets/: __init__.py  egodex.py
daft_physical_ai/episodes/: __init__.py  base.py  schema.py  writer.py
daft_physical_ai/evals/: __init__.py  compare.py  failures.py  protocol.py
daft_physical_ai/failure_modes/: __init__.py  regrasp.py
daft_physical_ai/hands/: __init__.py  _mediapipe.py  _wilor.py  schema.py
daft_physical_ai/ingest/: __init__.py  hdf5.py
daft_physical_ai/operations/: __init__.py  motion.py
daft_physical_ai/pose/: __init__.py  features.py  query.py  skeleton.py  state.py  temporal.py
daft_physical_ai/rewards/: __init__.py  _robometer.py  schema.py
daft_physical_ai/templates/: modal_eval_server.py.tmpl  run_robometer_server.py.tmpl  script_local.py.tmpl  script_modal.py.tmpl
docs/: mano.md
examples/: README.md  demo.ipynb  demo.md  demo.py  egodex_raw_hdf5_video.py
examples/01_reading_data/: README.md  droid_episode_index.py  egodex_raw_hdf5_video.py  lerobot_episode_index.py
examples/02_episode_data/: README.md  merge_lerobot_datasets.py  normalize_libero_demos.py
examples/02_episode_data/data/: README.md
examples/02_episode_data/data/libero_spatial_demos/: pick_up_the_black_bowl_between_the_plate_and_the_ramekin_and_place_it_on_the_plate.parquet  pick_up_the_black_bowl_from_table_center_and_place_it_on_the_plate.parquet  pick_up_the_black_bowl_in_the_top_drawer_of_the_wooden_cabinet_and_place_it_on_the_plate.parquet  pick_up_the_black_bowl_next_to_the_cookie_box_and_place_it_on_the_plate.parquet  pick_up_the_black_bowl_next_to_the_plate_and_place_it_on_the_plate.parquet  pick_up_the_black_bowl_next_to_the_ramekin_and_place_it_on_the_plate.parquet  pick_up_the_black_bowl_on_the_cookie_box_and_place_it_on_the_plate.parquet  pick_up_the_black_bowl_on_the_ramekin_and_place_it_on_the_plate.parquet  pick_up_the_black_bowl_on_the_stove_and_place_it_on_the_plate.parquet  pick_up_the_black_bowl_on_the_wooden_cabinet_and_place_it_on_the_plate.parquet
examples/03_transforms/: README.md  pose_features_numpy.py  pose_rates_in_dag.py
examples/04_episode_operations/: README.md  motion_trim.py  pose_query_segments.py
examples/04_episode_operations/hand_tracking/: README.md  demo.md  demo.py
examples/05_inference/: README.md
examples/06_writing_data/: README.md  write_curated_manifest.py
examples/07_training_handoff/: README.md  curated_dataset_to_torch_dataloader.py
examples/08_policy_evals/: README.md  acquisition_map.py  compare_policies.py  label_failures.py  mine_failures.py  success_rates.py  validate_protocol.py
examples/08_policy_evals/data/: README.md
examples/08_policy_evals/data/rollouts/: openvla.parquet  vla_jepa.parquet
examples/egodex_handtracking_lite/: demo.ipynb
examples/failure_modes/: README.md  regrasp_demo.py
examples/hands/: demo.ipynb  demo.md
examples/modal/: README.md
examples/modal/marimo_gallery/: README.md  modal_app.py  web_app.py
examples/modal/marimo_gallery/content/: demos.md  egodex.md  examples.md  index.md  policy_evals.md
examples/modal/marimo_gallery/notebooks/: droid_kitchen.py
examples/modal_marimo_daft/: README.md  modal_app.py  web_app.py
examples/modal_marimo_daft/content/: demos.md  droid.md  egodex.md  failure_modes.md  index.md
examples/rewards/: demo.ipynb  demo.md  demo.py
scripts/: regen_demo.py
tests/: test_cli.py  test_cli_rewards.py  test_curation.py  test_datasets_egodex.py  test_episodes_schema.py  test_evals_compare.py  test_evals_failures.py  test_evals_protocol.py  test_failure_modes.py  test_greet.py  test_hands_mediapipe.py  test_hands_wilor.py  test_ingest_hdf5.py  test_operations_motion.py  test_pose.py  test_pose_geometry.py  test_pose_query.py  test_pose_temporal.py  test_rewards.py
