[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "daft-physical-ai"
description = "Physical-AI data annotation on Daft, starting with hand tracking."
dependencies = ["daft>=0.7.5"]  # Add additional dependencies here
dynamic = ["version"]
license = "Apache-2.0"
authors = [{name = "Eventual"}]
maintainers = [{name = "Eventual"}]
readme = "README.md"
requires-python = ">=3.10,<3.14"

[project.urls]
Repository = "https://github.com/Eventual-Inc/daft-physical-ai"

[dependency-groups]
dev = [
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "ruff==0.15.20",
  "mypy==2.1.0"
]

[tool.hatch.version]
source = "vcs"

[tool.mypy]
files = ["daft_physical_ai/**/*.py", "tests/**/*.py"]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
