[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "daft-physical-ai"
description = "Physical-AI data processing on Daft, starting with hand tracking."
# daft floor: v0.7.20 fixes the progress-bar fd/thread leak under Jupyter
# (Daft#7262) that crashed demo notebooks (#24); v0.7.18 brought the batched
# video decode (Daft#7184) the demo depends on for reasonable remote-read
# performance. The [video] brings av + pillow for video decode; [hdf5] supports
# raw EgoDex metadata and trajectory files. Both are part of the normal package
# surface.
dependencies = ["daft[hdf5,video]>=0.7.20", "numpy"]
dynamic = ["version"]
license = "Apache-2.0"
authors = [{name = "Eventual"}]
maintainers = [{name = "Eventual"}]
readme = "README.md"
requires-python = ">=3.10,<3.14"

[project.optional-dependencies]
mediapipe = ["mediapipe>=0.10"]
# WiLoR needs a CUDA torch build and the WiLoR repo (cloned at runtime via
# ensure_assets). Install the matching torch/torchvision for your CUDA first.
# Also needs chumpy from git (`pip install "chumpy @ git+https://github.com/mattloper/chumpy"`),
# omitted here because direct references can't ship in published metadata. The
# proven environment is the Modal image used to test it.
wilor = [
  "torch",
  "torchvision",
  "ultralytics==8.1.34",
  "smplx==0.1.28",
  "pytorch-lightning==2.1.3",
  "scikit-image",
  "opencv-python-headless",
  "numpy<2",
  "yacs",
  "timm",
  "einops",
  "xtcocotools",
  "pandas",
  "hydra-core",
  "hydra-colorlog",
  "pyrootutils",
  "rich",
  "webdataset"
]
# Everything (both methods). WiLoR still needs the CUDA torch build + chumpy-from-git
# (see the wilor note above); those can't ship in metadata.
all = ["daft-physical-ai[mediapipe,wilor]"]

[project.scripts]
daft-physical-ai = "daft_physical_ai.cli:main"

[project.urls]
Repository = "https://github.com/Eventual-Inc/daft-physical-ai"

[tool.hatch.build.targets.wheel]
# Ship the CLI's demo templates (non-.py data files) inside the package.
include = ["daft_physical_ai/**/*.py", "daft_physical_ai/templates/*.tmpl"]

[tool.hatch.version]
source = "vcs"

[tool.ty.rules]
unresolved-import = "ignore"

[[tool.ty.overrides]]
include = ["examples/**", "tests/**"]
rules = {invalid-argument-type = "ignore", unsupported-operator = "ignore"}

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
  "pre-commit==4.6.0",
  "pytest==9.1.1",
  "ruff==0.15.20",
  "ty==0.0.58"
]
